--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,9 @@ excerpt_separator: <!--more-->
 
 header:
   links:             # Links on the header. Link to in-site page with a slash as prefix
-    About: /about/
+    Articles: /
     Category: /category/
+    About: /about/
 
 permalink: /archivers/:title
 plugins:
