--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: >
 # Your information
 email: mzy@mail.ustc.edu.cn
 author: Zhongyang Ma
-avatar: "github.com/ZhongyangMA/images/blob/master/webflux-streaming-demo/buffer.jpg"
+avatar: "http://lorempixel.com/400/400/"
 profile: Java Developer, a lifelong learner.
 #twitter_username: twitter_username
 #github_username:  github_username
