--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: >
 # Your information
 email: mzy@mail.ustc.edu.cn
 author: Zhongyang Ma
-avatar: "http://lorempixel.com/400/400/"
+avatar: "https://github.com/ZhongyangMA/ZhongyangMA.github.io/raw/master/img/mzy.jpg"
 profile: Java Developer, a lifelong learner.
 #twitter_username: twitter_username
 #github_username:  github_username
