--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: Zhongyang Ma
 avatar: "https://github.com/ZhongyangMA/ZhongyangMA.github.io/raw/master/img/mzy.png"
 profile: Java Developer, a lifelong learner.
 #twitter_username: twitter_username
-#github_username:  github_username
+github_username:  ZhongyangMA
 profile_links:
   Email: "mailto:mzy@mail.ustc.edu.cn"
   GitHub: "https://github.com/ZhongyangMA"
