--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ description: >
 
 # Your information
 email: mzy@mail.ustc.edu.cn
-author: Zhongyang Ma
-avatar: "https://github.com/ZhongyangMA/ZhongyangMA.github.io/raw/master/img/mzy.png"
+author: Zhongyang MA
+avatar: "https://github.com/ZhongyangMA/ZhongyangMA.github.io/raw/master/img/solarwind.jpg"
 profile: Java Developer, a lifelong learner.
 #twitter_username: twitter_username
 #github_username:  ZhongyangMA
