--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: >
 email: mzy@mail.ustc.edu.cn
 author: Zhongyang MA
 avatar: "https://github.com/ZhongyangMA/ZhongyangMA.github.io/raw/master/img/solarwind.jpg"
-profile: Senior Java Developer, lifelong learner.
+profile: Senior Java Developer, Lifelong Learner
 #twitter_username: twitter_username
 
 profile_links:
