--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: >
 email: mzy@mail.ustc.edu.cn
 author: Zhongyang MA
 avatar: "/img/solarwind.jpg"
-profile: Senior Java Developer, Lifelong Learner
+profile: Senior Java Developer, Tech Enthusiast, Lifelong Learner
 #twitter_username: twitter_username
 
 profile_links:
