--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ profile_links:
 
 # Comment Service (Disqus or 多说)
 #  choose one and un-comment the line to active it
-disqus_shortname: xxx  # get one: https://disqus.com/admin/signup/
-#duoshuo_shortname: xxx  # get one: http://duoshuo.com/create-site/
+#disqus_shortname: xxx  # get one: https://disqus.com/admin/signup/
+duoshuo_shortname: xxx  # get one: http://duoshuo.com/create-site/
 
 excerpt_separator: <!--more-->
 
