--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: >
 email: mzy@mail.ustc.edu.cn
 author: Zhongyang MA
 avatar: "/img/solarwind.jpg"
-profile: Senior Java Developer, Tech Enthusiast, Lifelong Learner
+profile: Senior Java Developer, Tech Enthusiast, Lifelong Learner.
 #twitter_username: twitter_username
 
 profile_links:
@@ -20,8 +20,8 @@ profile_links:
 
 # Comment Service (Disqus or 多说)
 #  choose one and un-comment the line to active it
-#disqus_shortname: xxx  # get one: https://disqus.com/admin/signup/
-duoshuo_shortname: xxx  # get one: http://duoshuo.com/create-site/
+disqus_shortname: xxx  # get one: https://disqus.com/admin/signup/
+#duoshuo_shortname: xxx  # get one: http://duoshuo.com/create-site/
 
 excerpt_separator: <!--more-->
 
