--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ excerpt_separator: <!--more-->
 
 header:
   links:             # Links on the header. Link to in-site page with a slash as prefix
-    Articles: /index/
+    Articles: /articles/
     Category: /category/
     About: /about/
 
