--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: "https://zhongyangma.github.io"    # the protocol and hostname of your site
 baseurl: "" # the prefix of your site uri, eg. `"/jekyll-theme-EasyBook"` or empty string `""`
 timezone: Asia/Shanghai
 description: >
-  I'm Zhongyang Ma and this blog is concerned about Web development, my reading notes and other interesting topics. Please feel free to leave a comment or contact me by email if you have any question.
+  I'm Zhongyang Ma and this blog is concerned about web-related technologies. Most of the articles are my reading notes, covering a variety of topics in software development. Please feel free to leave a comment or contact me by email if you have any question.
 
 # Your information
 email: mzy@mail.ustc.edu.cn
