--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ profile_links:
 
 # Comment Service (Disqus or 多说)
 #  choose one and un-comment the line to active it
-disqus_shortname: ZhongyangMa  # get one: https://disqus.com/admin/signup/
+disqus_shortname: Zhongyang-Ma  # get one: https://disqus.com/admin/signup/
 #duoshuo_shortname: xxx  # get one: http://duoshuo.com/create-site/
 
 excerpt_separator: <!--more-->
