--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: >
 email: mzy@mail.ustc.edu.cn
 author: Zhongyang MA
 avatar: "/img/solarwind.jpg"
-profile: Senior Java Developer, Tech Enthusiast, Lifelong Learner.
+profile: Senior Java Developer, Tech Enthusiast, Blog Writer, PhD in Physics.
 #twitter_username: twitter_username
 
 profile_links:
