--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: >
 # Your information
 email: mzy@mail.ustc.edu.cn
 author: Zhongyang MA
-avatar: "/img/head.png"
+avatar: "/img/avatar.png"
 profile: Senior Java Developer, Tech Enthusiast, Blog Writer, PhD in Physics.
 #twitter_username: twitter_username
 
