--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ profile: Senior Java Developer, Tech Enthusiast, Blog Writer, PhD in Physics.
 profile_links:
   Email: "mailto:mzy@mail.ustc.edu.cn"
   GitHub: "https://github.com/ZhongyangMA"
-  # LinkedIn: "https://www.linkedin.com/in/zhongyang-ma/?locale=en_US"
+  LinkedIn: "https://www.linkedin.com/in/zhongyang-ma/?locale=en_US"
 
 # Comment Service (Disqus or 多说)
 #  choose one and un-comment the line to active it
