change email addr

--- a/_config.yml
+++ b/_config.yml
@@ -8,14 +8,14 @@ description: >
   I'm Zhongyang Ma and this blog is concerned about web-related technologies. Most of the articles are my reading notes, covering a variety of topics in software development. Please feel free to leave a comment or contact me by email if you have any question.
 
 # Your information
-email: mzy@mail.ustc.edu.cn
+email: zhongyang.mzy@gmail.com
 author: Zhongyang MA
 avatar: "/img/avatar.png"
 profile: Senior Java Developer, Tech Enthusiast, Blog Writer, PhD in Physics.
 #twitter_username: twitter_username
 
 profile_links:
-  Email: "mailto:mzy@mail.ustc.edu.cn"
+  Email: "mailto:zhongyang.mzy@gmail.com"
   GitHub: "https://github.com/ZhongyangMA"
   LinkedIn: "https://www.linkedin.com/in/zhongyangma/?locale=en_US"
 
