--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: >
 email: zhongyang.mzy@gmail.com
 author: Zhongyang MA
 avatar: "/img/avatar.png"
-profile: Senior Java Developer, Tech Enthusiast, Blog Writer, PhD in Physics.
+profile: Senior Java Developer, Open Source Enthusiast, Blog Writer, PhD in Physics.
 #twitter_username: twitter_username
 
 profile_links:
